--- a/Test.SqlCodeSmell/Test.SqlCodeSmell.csproj
+++ b/Test.SqlCodeSmell/Test.SqlCodeSmell.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{83F91B22-0038-41D4-ABBC-0F10DB2D1AF7}</ProjectGuid>
+    <ProjectGuid>{ED8F4126-4CEE-448F-A6AE-C07B71115E53}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SqlCodeSmell</RootNamespace>
-    <AssemblyName>SqlCodeSmell</AssemblyName>
+    <RootNamespace>Test.SqlCodeSmell</RootNamespace>
+    <AssemblyName>Test.SqlCodeSmell</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,8 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlObject.cs" />
+    <Compile Include="TestValues.cs" />
+    <Compile Include="TestWashSqlObj.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SqlCodeSmell\SqlCodeSmell.csproj">
+      <Project>{83f91b22-0038-41d4-abbc-0f10db2d1af7}</Project>
+      <Name>SqlCodeSmell</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
