--- a/Test.SqlCodeSmell/Test.SqlCodeSmell.csproj
+++ b/Test.SqlCodeSmell/Test.SqlCodeSmell.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestValues.cs" />
-    <Compile Include="TestWashSqlObj.cs" />
+    <Compile Include="TestSqlObj.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
