--- a/Test.SqlCodeSmell/Test.SqlCodeSmell.csproj
+++ b/Test.SqlCodeSmell/Test.SqlCodeSmell.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestSplitBy.cs" />
     <Compile Include="TestValues.cs" />
     <Compile Include="TestSqlObj.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
